# Oreag

./: .gitignore  DEPLOY.md  FLOW.md  LICENSE  Readme.md  index.py  oreag.c4  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  requirements-dev.txt  requirements-local.txt  requirements.txt
backend/app/: config.py  crypto.py  db.py  main.py  models.py  schemas.py  sse.py
backend/tests/: apply_migrations.py  conftest.py  test_agentic.py  test_ingest_queue.py  test_query.py  test_query_cache.py  test_rate_limit.py  test_semantic_cache.py  test_units.py  verify_add_config.py  verify_db.py  verify_e2e.py  verify_m1.py  verify_memory.py  verify_storage.py
docs/: faq.txt  handbook.txt
frontend/: CLAUDE.md  next.config.ts  package-lock.json  package.json
frontend/scripts/: generate-og.mjs
frontend/src/: proxy.ts
legacy/: Log.md  rag_graph.py
legacy/docs/: product_notes.txt
mcp-server/: .dockerignore  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml
mcp-server/oreag_mcp/: client.py  server.py
mcp-server/tests/: test_client.py
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_markitdown_memory_graph.sql  0004_per_file_chunking.sql  0005_provider_keys.sql  0006_avatars.sql  0007_memories.sql  0008_api_key_upload_scope.sql  0009_null_stale_memory_embeddings.sql  0010_semantic_query_cache.sql  0011_semantic_cache_rls.sql  0012_hybrid_search.sql  0013_query_log_cache_layer.sql  0014_project_suspended.sql  0015_files_conversion_note.sql  0016_phase2_scale.sql  0017_auth_methods_rpc.sql
supabase/templates/: confirm-signup.html  (+1 more)
(+120 files in other folders)
