[project]
name = "oreag-mcp"
version = "0.1.0"
description = "MCP server for Oreag — per-project agent memory + RAG over documents."
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.2", "httpx>=0.27"]

[project.scripts]
oreag-mcp = "oreag_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
